<resources>
    <string name="app_name">SmartPost</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="web_client">492241941773-j5437ngp4ssejm76mnrmegcdqp7tgoga.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signIn">Войти</string>
    <string name="mail">почта</string>
    <string name="Password_rus">пароль</string>
    <string name="forget_password">Зыбыли пароль</string>
    <string name="vosstanovit">Восстановить</string>
    <string name="or">или</string>
    <string name="registration">Регистрация</string>
    <string name="tv_ewe_ne_zareg">Еще не зарегистрированы?</string>
    <string name="registration_rus">Регистрация</string>
    <string name="mail_rus">почта</string>
    <string name="cannot_registrated_rus">не удалось зарегестрироваться</string>
    <string name="send_email_verification_rus">На вашу почту отправлена ссылка для подтверждения!</string>
    <string name="cannot_send_email_verification_rus">Не удалось отправить ссылку для подтверждения на почту</string>
    <string name="waiting_verify_rus">ожидание на подтверждение</string>
    <string name="send_again_rus">отправить повторно</string>
    <string name="_30">30</string>
    <string name="resend">отправить повторно</string>
    <string name="buy">купить</string>
    <string name="detail_rus">подробнее</string>
    <string name="tv_add_course_rus">добавить свой курс</string>
    <string name="tv_course_rus">созданные курсы</string>
    <string name="tv_data_experience_rus">5 лет</string>
    <string name="tv_experience_rus">стаж</string>
    <string name="tv_education_rus">образование</string>
    <string name="tv_email_rus">почта</string>
    <string name="tv_city_rus">город</string>
    <string name="tv_speciality_rus">Введите специальность</string>
    <string name="tv_title_rus">Введите имя</string>
    <string name="btn_edit_rus">Редактировать</string>
    <string name="tv_data_city_name_rus">Бишкек</string>
    <string name="tv_data_contact_rus">+996777777777</string>
    <string name="tv_data_education_rus">информационная безопасность</string>
    <string name="tv_change_photo_rus">Изменить фото профиля</string>
    <string name="et_add_name_rus">Имя</string>
    <string name="et_add_speciality_rus">Специальность</string>
    <string name="et_add_city_rus">Город</string>
    <string name="et_add_contact_rus">Контакты</string>
    <string name="et_add_education_rus">Образование</string>
    <string name="et_add_experience_rus">Стаж</string>
    <string name="btn_save_data_rus">Сохранить</string>
    <string name="et_add_name_error_rus">заполните поле пожалуйста</string>
    <string name="addCourse">Создание курса</string>
    <string name="create">создать</string>
    <string name="fill_in_rus">заполните поля</string>
    <string name="choose_profession_rus">выбор профессии</string>
    <string name="experience_rus">стаж работы</string>
    <string name="add_img_rus">Фото</string>
    <string name="career_desc_rus">краткая информация о карьере</string>
    <string name="add_certificate_and_diploms_photo_rus">добавьте фото сертификатов и дипломов</string>
    <string name="add_photo_rus">Добавить фото</string>
    <string name="save">сохранить</string>
    <string name="createCourse">созданные курсы</string>
</resources>